--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,19 +8,19 @@
                 <a class="nav-link" href="/saved">Saved Articles</a>
             </li>
             <li class="nav-item">
-                <button type="button" class="btn btn-success btn-block" style="width: 100%;" id="scrape-articles">Scrape
+                <button type="button" class="btn btn-success btn-block"id="scrape-articles">Scrape
                     Articles</button>
             </li>
             <li class="nav-item">
-                <button type="button" class="btn btn-danger btn-block" style="width: 100%;" id="clear-articles">Clear
+                <button type="button" class="btn btn-danger btn-block" id="clear-articles">Clear
                     Articles</button>
             </li>
         </ul>
     </div>
 </nav>
 <p>&nbsp;</p>
-<div class="container article-container" style="background-color: whitesmoke; opacity: .9; height: 500px;">
-    <h1 class="text-center">NYT News Scraper</h1>
+<div class="container article-container">
+    <h1 class="text-center"><i class="far fa-newspaper"></i> NYT News Scraper</h1>
     <div id="article-section">
 
     </div>
